// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Standings component renders correctly expanded 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "white",
        "flex": 1,
        "justifyContent": "flex-start",
        "paddingBottom": 5,
        "paddingLeft": 5,
        "paddingTop": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#1F2236",
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderTopColor": "#1F2236",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "20%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 20,
                "marginLeft": 10,
                "marginRight": 10,
              },
            ]
          }
        >
          1
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "gold",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "700",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "textAlign": "center",
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 15,
              },
            ]
          }
        >
          Test 5
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "flex-end",
            "textAlign": "right",
            "width": "30%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 17,
                "paddingRight": 10,
              },
            ]
          }
        >
          555
           points
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderTopColor": "#1F2236",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "20%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 20,
                "marginLeft": 10,
                "marginRight": 10,
              },
            ]
          }
        >
          2
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "silver",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "700",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "textAlign": "center",
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 15,
              },
            ]
          }
        >
          Test 4
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "flex-end",
            "textAlign": "right",
            "width": "30%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 17,
                "paddingRight": 10,
              },
            ]
          }
        >
          444
           points
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderTopColor": "#1F2236",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "20%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 20,
                "marginLeft": 10,
                "marginRight": 10,
              },
            ]
          }
        >
          3
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "blue",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "700",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "textAlign": "center",
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 15,
              },
            ]
          }
        >
          Test 3
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "flex-end",
            "textAlign": "right",
            "width": "30%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 17,
                "paddingRight": 10,
              },
            ]
          }
        >
          333
           points
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontStyle": "italic",
          }
        }
      >
        Show less...
      </Text>
    </View>
  </View>
</View>
`;

exports[`Standings component renders correctly with 4 collapsed rows 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "white",
        "flex": 1,
        "justifyContent": "flex-start",
        "paddingBottom": 5,
        "paddingLeft": 5,
        "paddingTop": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#1F2236",
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderTopColor": "#1F2236",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "20%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 20,
                "marginLeft": 10,
                "marginRight": 10,
              },
            ]
          }
        >
          1
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "gold",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "700",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "textAlign": "center",
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 15,
              },
            ]
          }
        >
          Test 5
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "flex-end",
            "textAlign": "right",
            "width": "30%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 17,
                "paddingRight": 10,
              },
            ]
          }
        >
          555
           points
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderTopColor": "#1F2236",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "20%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 20,
                "marginLeft": 10,
                "marginRight": 10,
              },
            ]
          }
        >
          2
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "silver",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "700",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "textAlign": "center",
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 15,
              },
            ]
          }
        >
          Test 4
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "flex-end",
            "textAlign": "right",
            "width": "30%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 17,
                "paddingRight": 10,
              },
            ]
          }
        >
          444
           points
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderTopColor": "#1F2236",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "20%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 20,
                "marginLeft": 10,
                "marginRight": 10,
              },
            ]
          }
        >
          3
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "blue",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "700",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "textAlign": "center",
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 15,
              },
            ]
          }
        >
          Test 3
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "flex-end",
            "textAlign": "right",
            "width": "30%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 17,
                "paddingRight": 10,
              },
            ]
          }
        >
          333
           points
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderTopColor": "#1F2236",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "20%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 20,
                "marginLeft": 10,
                "marginRight": 10,
              },
            ]
          }
        >
          4
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "textAlign": "center",
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 15,
              },
            ]
          }
        >
          Test 2
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "flex-end",
            "textAlign": "right",
            "width": "30%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1F2236",
                "fontSize": 15,
                "fontWeight": "bold",
              },
              Object {
                "fontSize": 17,
                "paddingRight": 10,
              },
            ]
          }
        >
          222
           points
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Standings component renders correctly with a title 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "white",
        "flex": 1,
        "justifyContent": "flex-start",
        "paddingBottom": 5,
        "paddingLeft": 5,
        "paddingTop": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#1F2236",
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      Test Title
    </Text>
  </View>
  <ActivityIndicator
    animating={true}
    color="#8BA9FC"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 20,
      }
    }
  />
</View>
`;

exports[`Standings component renders correctly with no highlighted paramter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "white",
        "flex": 1,
        "justifyContent": "flex-start",
        "paddingBottom": 5,
        "paddingLeft": 5,
        "paddingTop": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#1F2236",
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    />
  </View>
  <ActivityIndicator
    animating={true}
    color="#8BA9FC"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 20,
      }
    }
  />
</View>
`;
